# tsrs-mcp-server

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: fuse.rs  main.rs
ts-derive/: Cargo.toml  README.md
ts-derive/src/: lib.rs
ts-model/: Cargo.toml
ts-model/src/: endpoint.rs  lib.rs  model.rs
