[package]
name = "tsrs-mcp-server"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ts-derive", "ts-model"]

[dependencies]
tokio = { workspace = true }
ts-model = { workspace = true }
ts-derive = { workspace = true }
poem-mcpserver = { workspace = true }
schemars = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
paste = "1.0.15"

[workspace.dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
poem-mcpserver = { version = "0.1.3", features = ["poem"] }
schemars = "0.8.22"
chrono = "0.4"
futures = "0.3"
ts-derive = { path = "./ts-derive" }
ts-model = { path = "./ts-model" }
