[package]
name = "tsrs-mcp-server"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ts-derive", "ts-model"]

[dependencies]
tokio = { workspace = true }
ts-model = { workspace = true }
ts-derive = { workspace = true }
poem-mcpserver = { workspace = true }
poem = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }

tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.3", features = ["derive"] }

[workspace.dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
poem-mcpserver = { version = "0.2.1", features = ["poem", "streamable-http"] }
poem = { version = "3.1.9", features = ["sse"] }
schemars = "0.8.22"
chrono = "0.4"
futures = "0.3"
ts-derive = { path = "./ts-derive" }
ts-model = { path = "./ts-model" }
