[package]
name = "ts-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for Tushare API integration"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/hanxuanliang/tsrs-mcp-server"
documentation = "https://docs.rs/ts-derive"
readme = "README.md"
keywords = ["tushare", "api", "derive", "macro"]
categories = ["api-bindings", "development-tools::procedural-macros"]

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenvy = "0.15.7"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20.3"
